brain/sources/prod-metadata/objects/Zoom_Recording_Access_Log__c/Zoom_Recording_Access_Log__c.object-meta.xml
<CustomObject>
    <label>Zoom Recording Access Log</label>
    <nameField>
        <displayFormat>LOG-{0000000}</displayFormat>
        <label>Log Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Zoom Recording Access Logs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>