brain/sources/prod-metadata/objects/Zoom_Recording_Access_Log__c/fields/Department__c.field-meta.xml
<CustomField>
    <fullName>Department__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Department</label>
    <referenceTo>Zoom_Recording_Department__c</referenceTo>
    <relationshipName>Access_Logs</relationshipName>
    <type>Lookup</type>
</CustomField>