brain/sources/prod-metadata/objects/Zoom_Recording_Access_Log__c/fields/Event_Timestamp__c.field-meta.xml
<CustomField>
    <fullName>Event_Timestamp__c</fullName>
    <label>Event Timestamp</label>
    <type>DateTime</type>
</CustomField>