brain/sources/prod-metadata/objects/Zoom_Recording_Access_Log__c/fields/Event_Type__c.field-meta.xml
<CustomField>
    <fullName>Event_Type__c</fullName>
    <label>Event Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>View</fullName>
            </value>
            <value>
                <fullName>Download</fullName>
            </value>
            <value>
                <fullName>Access_Denied</fullName>
            </value>
            <value>
                <fullName>Login</fullName>
            </value>
            <value>
                <fullName>Share</fullName>
            </value>
            <value>
                <fullName>Portal_Access</fullName>
            </value>
            <value>
                <fullName>Logout</fullName>
            </value>
            <value>
                <fullName>Signed_URL</fullName>
            </value>
            <value>
                <fullName>File_Access</fullName>
            </value>
            <value>
                <fullName>Sync_Complete</fullName>
            </value>
            <value>
                <fullName>Sync_Error</fullName>
            </value>
            <value>
                <fullName>Shared_Link_Accessed</fullName>
            </value>
            <value>
                <fullName>Video_Shared</fullName>
            </value>
            <value>
                <fullName>Login_Success</fullName>
            </value>
            <value>
                <fullName>Screen_Recording_Attempt</fullName>
            </value>
            <value>
                <fullName>Portal_Exit</fullName>
            </value>
            <value>
                <fullName>Transcript_Copy</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>