brain/sources/prod-metadata/objects/Zoom_Recording_Access_Log__c/fields/File_Key__c.field-meta.xml
<CustomField>
    <fullName>File_Key__c</fullName>
    <label>File Key</label>
    <length>255</length>
    <type>Text</type>
</CustomField>