brain/sources/prod-metadata/objects/Zoom_Recording_Access_Log__c/fields/Interview__c.field-meta.xml
<CustomField>
    <fullName>Interview__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Interview</label>
    <referenceTo>Interview__c</referenceTo>
    <relationshipLabel>Zoom Recording Access Logs</relationshipLabel>
    <relationshipName>Zoom_Recording_Access_Logs</relationshipName>
    <type>Lookup</type>
</CustomField>