brain/sources/prod-metadata/objects/Zoom_Recording_Access_Log__c/fields/IP_Address__c.field-meta.xml
<CustomField>
    <fullName>IP_Address__c</fullName>
    <label>IP Address</label>
    <length>100</length>
    <type>Text</type>
</CustomField>