brain/sources/prod-metadata/objects/Zoom_Recording_Access_Log__c/fields/Opened_By__c.field-meta.xml
<CustomField>
    <fullName>Opened_By__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Opened By</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Zoom_Recording_Access_Logs</relationshipName>
    <type>Lookup</type>
</CustomField>