brain/sources/prod-metadata/objects/Zoom_Recording_Access_Log__c/fields/Recording_Link__c.field-meta.xml
<CustomField>
    <fullName>Recording_Link__c</fullName>
    <label>Recording Link</label>
    <type>Url</type>
</CustomField>