brain/sources/prod-metadata/objects/Zoom_Recording_Access_Log__c/fields/Session__c.field-meta.xml
<CustomField>
    <fullName>Session__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Session</label>
    <referenceTo>Session__c</referenceTo>
    <relationshipLabel>Zoom Recording Access Logs</relationshipLabel>
    <relationshipName>Zoom_Recording_Access_Logs</relationshipName>
    <type>Lookup</type>
</CustomField>