brain/sources/prod-metadata/objects/Zoom_Recording_Access_Log__c/fields/Source__c.field-meta.xml
<CustomField>
    <fullName>Source__c</fullName>
    <label>Source</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>App</fullName>
            </value>
            <value>
                <fullName>Experience Cloud</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>