brain/sources/prod-metadata/objects/Zoom_Recording_Access_Log__c/fields/Source_Object__c.field-meta.xml
<CustomField>
    <fullName>Source_Object__c</fullName>
    <label>Source Object</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>interview</fullName>
            </value>
            <value>
                <fullName>session</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>