brain/sources/prod-metadata/objects/Zoom_Recording_Access_Log__c/fields/User__c.field-meta.xml
<CustomField>
    <fullName>User__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>User</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Access_Logs</relationshipName>
    <type>Lookup</type>
</CustomField>