brain/sources/prod-metadata/objects/Zoom_Recording_Access_Log__c/fields/User_Agent__c.field-meta.xml
<CustomField>
    <fullName>User_Agent__c</fullName>
    <label>User Agent</label>
    <type>TextArea</type>
</CustomField>